// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 klcikH"
    id="Field"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field Name
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
      fontSize="1rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.5px"
    >
      Field Value
    </p>
  </section>
  <div />
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 gKPNdq Field__FieldGrid-sc-11od8ug-5 dNMcQJ"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 klcikH"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Default
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 kElfJT"
      id="Edge-Aligned"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Edge-Aligned
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 eUfulr"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 epmcuZ"
      id="Vertically-Aligned"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Vertically-Aligned
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 gKPNdq Field__FieldGrid-sc-11od8ug-5 dNMcQJ"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 klcikH"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 kXJpZg"
      id="2x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label (2x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 bEiGHP"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label (3x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 ekhoGt"
      id="4x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label (4x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 gKPNdq Field__FieldGrid-sc-11od8ug-5 dNMcQJ"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 blIGjA"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Small Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 klcikH"
      id="2x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Default Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 dekKdz"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Large Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 dua-dNL"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        XL Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fJxAWP Field__FieldItem-sc-11od8ug-0 hHUYFg"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cefDHQ Field__FieldLabel-sc-11od8ug-2 iHxIey"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        2XL Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 ikAKub Field__FieldValue-sc-11od8ug-3 iLwABS"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;
